--- a/views/layout.pug
+++ b/views/layout.pug
@@ -53,7 +53,7 @@ html(lang='en')
             li(class='nav-item')
               a(class='nav-link', aria-current='page', href='/stats', id='nav-stats') Stats
             li(class='nav-item')
-              a(class='nav-link', aria-current='page', href='/worldState/events', id='nav-events') WorldEvents
+              a(class='nav-link', aria-current='page', href='https://hub.warframestat.us/', id='nav-wstate') World State
             li(class='nav-item')
               if (connected === true)
                 a(class='nav-link', aria-current='page', href='/users/disconnect')
