--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  //padding: 50px;
+  /* padding: 50px; */
   position: relative;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   padding-top: 60px;
