--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(lang='en')
     block body
       nav(class='navbar navbar-expand-lg navbar-light')
         div(class='row')
-          a(class='navbar-brand', href='#') WarframeStats
+          a(class='navbar-brand mx-1' href='#') WarframeStats
             button(class='navbar-toggler ms-1', type='button', data-bs-toggle='collapse', data-bs-target='#navbarTogglerWS', aria-controls='navbarTogglerWS', aria-expanded='false', aria-label='Toggle navigation')
               span(class='navbar-toggler-icon')
         div(class='collapse navbar-collapse' id='navbarTogglerWS')
@@ -67,8 +67,6 @@ html(lang='en')
                     path(fill="#fff" d="m162.27 317.75-30.92 30.65 39.62 39.61 31.29-31.03c69.87 57.6 131.69-3.38 177.78-49.48L357.55 285l49.47-49.45c8.33-8.33 8.33-21.98 0-30.32-8.34-8.34-21.99-8.33-30.32 0l-49.46 49.46-63.1-63.09 49.46-49.47c8.34-8.33 8.34-21.98 0-30.31-8.34-8.34-21.98-8.34-30.32 0l-49.46 49.46-21.69-21.7c-47.36 47.36-106.64 105.87-49.86 178.17z")
       section(id='pageContent')
         block content
-      footer(class='page-footer fixed-bottom', background-color='#e9e9f9')
-        div(class='container-fluid', width='100%' height='25px')
-          p(class='text-end')
-            i croopyrite jojo
-
+      footer(class='page-footer fixed-bottom' background-color='#e9e9f9')
+        div(class='container-fluid py-0' height='50px')
+          p(class='col text-end footer-text') v#{version} croopyrite jojo
