--- a/views/login.pug
+++ b/views/login.pug
@@ -14,13 +14,13 @@ block content
 					input(class='col-sm-10 form-control', id='email', name='user[email]', type='text', aria-describedby="emailHelp" value=email)
 				else
 					input(class='col-sm-10 form-control', id='email', name='user[email]', type='text', aria-describedby="emailHelp" placeholder="Enter email")
-				if (errors && errors.email)
-					small(id='emailError', class="form-text", style='color: red;')= errors.email
+				if (errors && errors.error_email)
+					small(id='emailError', class="form-text", style='color: red;')= errors.error_email
 			div(class='form-group mt-2')
 				label(class='col-form-label col-sm-2' for='password') Password :
 				input(class='col-sm-10 form-control', id='password', name='user[password]', type='password', placeholder="Enter password")
-				if (errors && errors.password)
-					small(id='passwordError', class="form-text", style='color: red;')= errors.password
+				if (errors && errors.error_password)
+					small(id='passwordError', class="form-text", style='color: red;')= errors.error_password
 			div(class='row mt-4')
 				input(class='btn btn-outline-primary w-25 ms-3' type='submit' value='Login')
 			div(class='row mt-2')
