--- a/views/rewardList2.pug
+++ b/views/rewardList2.pug
@@ -8,7 +8,7 @@ block append scripts
 	script(src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js")
 	script(src='https://code.jquery.com/ui/1.13.1/jquery-ui.js')
 	script(nonce=nonce, type='text/javascript').
-		var totalCount = #{totalCount};
+		const totalCount = #{totalCount};
 	script(src='/javascripts/rewardListScripts.js')
 
 block content
@@ -17,10 +17,10 @@ block content
 
 	div(class='container-fluid')
 		div(class='row mt-1')
-			if (totalCount == 0)
+			if (totalCount === 0)
 				h3 No sortie rewards with current selection
 			else
-				h3 Sortie Rewards from #{offset + 1} to #{offset + rewards.length} over #{totalCount} rewards.
+				h3 Rewards from #{offset + 1} to #{offset + rewards.length} out of #{totalCount}.
 		form(action='/rewardForm/list2' id="formOptions" method='post')
 			div(class='row')
 				div(class='col-sm p-1')
