--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,11 +3,11 @@ html(lang='en')
   head
     title= title
     block link
-      link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css', integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3', crossorigin='anonymous')
+      link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css', integrity='sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65', crossorigin='anonymous')
       link(rel='stylesheet', href='/stylesheets/site.css')
     block scripts
       - const version = 2.0
-      script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js', integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p', crossorigin='anonymous')
+      script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js', integrity='sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4', crossorigin='anonymous')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(charset='utf-8')
   body
@@ -50,6 +50,8 @@ html(lang='en')
                     path(d="M3292 5063 c-55 -19 -147 -104 -177 -163 -91 -179 -22 -396 153 -482 l67 -33 2370 0 2370 0 56 26 c72 34 134 96 168 168 23 49 26 69 26 156 0 81 -4 109 -22 147 -29 63 -96 134 -158 166 l-50 27 -2380 2 c-2103 1 -2385 0 -2423 -14z")
                     path(d="M1731 3120 c-68 -15 -180 -72 -235 -121 -183 -163 -221 -448 -88 -655 242 -374 811 -282 922 150 24 93 25 137 6 227 -37 174 -167 322 -332 380 -68 23 -206 33 -273 19z")
                     path(d="M3297 2975 c-21 -8 -56 -27 -76 -42 -217 -159 -184 -498 58 -612 l56 -26 2370 0 2370 0 55 26 c70 33 136 99 169 169 23 48 26 68 26 155 0 89 -3 106 -28 157 -17 34 -50 77 -82 106 -98 90 153 82 -2514 81 -2008 0 -2372 -3 -2404 -14z")
+            li(class='nav-item')
+              a(class='nav-link', aria-current='page', href='/netracells/list', id='nav-netra') Netracells
             li(class='nav-item')
               a(class='nav-link', aria-current='page', href='/stats', id='nav-stats') Stats
             li(class='nav-item')
