--- a/views/statsGeneral.pug
+++ b/views/statsGeneral.pug
@@ -6,11 +6,11 @@ block content
 
 	div(class='container-lg')
 		div(class='row m-1')
-			if (stats)
+			if (sortie.stats)
 				div(class='row')
-					h3= title
-					p=	totalCount + ' rewards.'
-					a(href='https://www.warframe.com/fr/droptables') Official <i>droptables</i> on Warframe.com
+					h3= sortie.title
+					p=	sortie.totalCount + ' rewards.'
+					a(href='https://www.warframe.com/fr/droptables#sortieRewards') Official <i>droptables</i> on Warframe.com
 				div(class='row')
 					table(class='table table-responsive table-striped table-hover')
 						thead
@@ -19,7 +19,7 @@ block content
 								th(style='padding-right:15px;') Count
 								th Percentage
 						tbody
-							for stat in stats
+							for stat in sortie.stats
 								tr
 									td(style='padding-right:15px;')
 										if stat.type.name.search('Riven') >= 0
@@ -29,6 +29,27 @@ block content
 										else
 											= stat.type.name
 									td= stat.count
-									td= Number.parseFloat(stat.count * 100 / totalCount).toFixed(1) + '%'
+									td= Number.parseFloat(stat.count * 100 / sortie.totalCount).toFixed(1) + '%'
 			else
-				h2 No stats !
+				h2 No sortie stats !
+		div(class='row m-1')
+			if (netracell.stats)
+				div(class='row')
+					h3= netracell.title
+					p=  netracell.totalCount + ' rewards.'
+					a(href='https://www.warframe.com/fr/droptables') Official <i>droptables</i> on Warframe.com
+				div(class='row')
+					table(class='table table-responsive table-striped table-hover')
+						thead
+							tr
+								th Reward type
+								th(style='padding-right:15px;') Count
+								th Percentage
+						tbody
+							each value, key in netracell.stats
+								tr
+									td(style='padding-right:15px;')= key
+									td= value
+									td= Number.parseFloat(value * 100 / netracell.totalCount).toFixed(1) + '%'
+			else
+				h2 No netracell stats !
