--- a/views/netracellList.pug
+++ b/views/netracellList.pug
@@ -1,9 +1,9 @@
 extends layout
 
 block append link
-	link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css")
-	link(rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.24.1/dist/bootstrap-table.min.css")
-	link(rel="stylesheet" href="/stylesheets/bootstrap-datepicker.min.css")
+	link(rel="stylesheet" href="/stylesheets//bootstrap-icons.min.css" integrity="sha384-XGjxtQfXaH2tnPFa9x+ruJTuLE3Aa6LhHSWRr1XeTyhezb4abCG4ccI5AkVDxqC+" crossorigin="anonymous")
+	link(rel="stylesheet" href="/stylesheets/bootstrap-table.min.css" integrity="sha384-tfNXB2/2SVNPdzoqPNMSl0hXmUVBnwOL4odQANKVfu66tA4jFcF+5Ch4nu1LtZAc" crossorigin="anonymous")
+	link(rel="stylesheet" href="/stylesheets/bootstrap-datepicker.min.css" integrity="sha384-zvbUuMKPgCSuct40UkVd6HUYDuFhKBSPkU7uldv0n0/7lkeeh7E9Y3y5XrZ47WAu" crossorigin="anonymous")
 
 block append scripts
 
@@ -85,12 +85,12 @@ block content
 						th(data-field="reward" data-filter-control="select") Reward
 						th(data-field="tauforged" data-filter-control="select") Tauforged
 				tbody(style='height: 10px !important; overflow-y: auto;')
-		script(src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js")
-		script(src="https://unpkg.com/bootstrap-table@1.24.1/dist/bootstrap-table.min.js")
-		script(src="https://unpkg.com/bootstrap-table@1.24.1/dist/extensions/filter-control/bootstrap-table-filter-control.min.js")
-		script(src="/javascripts/bootstrap-datepicker.min.js")
-		script(src="/javascripts/bootstrap-datepicker.fr.min.js")
-		script(src="/javascripts/form_netracell.js")
+		script(src="/javascripts/jquery.min.js" integrity="sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs" crossorigin="anonymous")
+		script(src="/javascripts/bootstrap-table.min.js" integrity="sha384-FosO0uRIBBE+YnU4QBFaUk9aMjP2twHyeirpW+jjfqBlKU1Kp576zfju1cWNkx3g" crossorigin="anonymous")
+		script(src="/javascripts/bootstrap-table-filter-control.min.js" integrity="sha384-FosO0uRIBBE+YnU4QBFaUk9aMjP2twHyeirpW+jjfqBlKU1Kp576zfju1cWNkx3g" crossorigin="anonymous")
+		script(src="/javascripts/bootstrap-datepicker.min.js" integrity="sha384-UfFXrLCKnPSgs5ztfw3VlXcuPOJzCyMzC8PeaIYBbPYaUFLsy7Aqp4goZLx/KCic" crossorigin="anonymous")
+		script(src="/javascripts/bootstrap-datepicker.fr.min.js" integrity="sha384-0QYShvU8+CrUwWRv5soLL/H+9wcwZLBj/F+0l2U1jwetUpy+beDjuDRzKylb7UFH" crossorigin="anonymous")
+		script(src="/javascripts/form_netracell.js" integrity="sha384-41IgYrUD9lyeeeexDDH4FnAsnP4/41rzwlboX39nz0g0ElHISFileyP6yj32Uv3C" crossorigin="anonymous")
 		script(nonce=nonce, type='text/javascript').
 			let $table = $('#table');
 
