--- a/views/rewardList.pug
+++ b/views/rewardList.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block append link
-	link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css")
-	link(rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.24.1/dist/bootstrap-table.min.css")
+	link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous")
+	link(rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.24.1/dist/bootstrap-table.min.css" integrity="sha384-tfNXB2/2SVNPdzoqPNMSl0hXmUVBnwOL4odQANKVfu66tA4jFcF+5Ch4nu1LtZAc" crossorigin="anonymous")
 
 block append scripts
 
@@ -38,10 +38,9 @@ block content
 						th(data-field="source.name" data-filter-control="select") Source
 						// a fusion of Boosters and Rivens
 						th(data-filter-control="select" data-formatter="infoFormatter") Additional information
-		script(src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js")
-		//script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous")
-		script(src="https://unpkg.com/bootstrap-table@1.24.1/dist/bootstrap-table.min.js")
-		script(src="https://unpkg.com/bootstrap-table@1.24.1/dist/extensions/filter-control/bootstrap-table-filter-control.min.js")
+		script(src="/javascripts/jquery.min.js" integrity="sha384-apfJm2DWye6itJXDari7QfgbBXzkNeRsr1xgTfEH0SCvYV+NlzqP+MkX/LHMZIPI" crossorigin="anonymous")
+		script(src="/javascripts/bootstrap-table.min.js" integrity="sha384-RzTQgB68/fm4vMToK8E0TUFrz19vvf/rE1U/SPU9Y3AVCYslx71YguRa8ZVnXHGF" crossorigin="anonymous")
+		script(src="/javascripts/bootstrap-table-filter-control.min.js" integrity="sha384-M2XjaOUdW77fyUVi9FWWgI2AebCp7oNx8HMDQjg4fH2af+BBosEYx0v/jPaDpRZE" crossorigin="anonymous")
 		script(nonce=nonce, type='text/javascript').
 			let $table = $('#table');
 
